2012-02-27  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/sparcv9/fpu/s_ceil.S: Fix accidental use of
	frame pointer instead of stack pointer relative arg slot.
	* sysdeps/sparc/sparc32/sparcv9/fpu/s_ceilf.S: Likewise.
	* sysdeps/sparc/sparc64/fpu/s_ceil.S: Likewise.
	* sysdeps/sparc/sparc64/fpu/s_ceilf.S: Likewise.

2012-02-27  Carlos O'Donell  <carlos_odonell@mentor.com>

	[BZ #3992]
	* stdlib/fmtmsg.c: Use of uint32_t requires stdint.h.

2012-02-27  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/sparcv9/fpu/s_ceil.S: Fix comment formatting.
	* sysdeps/sparc/sparc32/sparcv9/fpu/s_ceilf.S: Likewise.
	* sysdeps/sparc/sparc32/sparcv9/fpu/s_rint.S: Likewise.
	* sysdeps/sparc/sparc32/sparcv9/fpu/s_rintf.S: Likewise.
	* sysdeps/sparc/sparc64/fpu/s_ceil.S: Likewise.
	* sysdeps/sparc/sparc64/fpu/s_ceilf.S: Likewise.
	* sysdeps/sparc/sparc64/fpu/s_rint.S: Likewise.
	* sysdeps/sparc/sparc64/fpu/s_rintf.S: Likewise.

2012-02-27  Joseph Myers  <joseph@codesourcery.com>

	* configure.in (CC): Restrict allowed GCC versions to 4.3 and
	later.  Allow versions 5-9.
	* configure: Regenerated.
	* manual/install.texi (Tools for Compilation): Give GCC 4.3 as
	required minimum version and 4.6 as recommended version.  Do not
	mention bugs in GCC 2.7 and 2.8.
	* INSTALL: Regenerated.

2012-02-27  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/sparcv9/fpu/s_ceil.S: New file.
	* sysdeps/sparc/sparc32/sparcv9/fpu/s_ceilf.S: New file.
	* sysdeps/sparc/sparc32/sparcv9/fpu/s_rint.S: New file.
	* sysdeps/sparc/sparc32/sparcv9/fpu/s_rintf.S: New file.
	* sysdeps/sparc/sparc64/fpu/s_ceil.S: New file.
	* sysdeps/sparc/sparc64/fpu/s_ceilf.S: New file.
	* sysdeps/sparc/sparc64/fpu/s_rint.S: New file.
	* sysdeps/sparc/sparc64/fpu/s_rintf.S: New file.

	* sysdeps/ieee754/ldbl-128/s_nearbyintl.c (__nearbyintl): Do not
	manipulate bits before adding and subtracting TWO112[sx].
	* sysdeps/ieee754/ldbl-128/s_rintl.c (__rintl): Likewise.
